--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.5.0",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
