--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
