--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.40.0",
+    "eslint-plugin-react": "^7.32.2",
     "vite": "^4.0.0"
   }
 }
