--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://api.samarmart.com/
+VITE_API_BASE_URL=https://api.samarmart.com/api/v1/
 VITE_MEDIA_BASE_URL=https://api.samarmart.com/media/
