--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^38.1.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.2.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
